# TMS_django

./: .gitignore  db.sqlite3  pyproject.toml  readme.md  tasks.txt
accounts/: models.py  urls.py  views.py
accounts/templates/: authentication.html  login.html  registration.html
djangoProject/: settings.py  urls.py
posts/: admin.py  models.py  views.py
posts/migrations/: 0001_initial.py  0002_note_last_modified_at.py  0003_remove_note_last_modified_at_note_mod_time.py
static/css/: about.css  forms.css  global.css  main.css  note.css
static/images/: main_img.psd
static/js/: EditImage.js
templates/: about.html  base.html  create_form.html  edit_form.html  home.html  note.html
templates/inc/: _footer.html  _menu.html  _posts-list.html  _welcome.html
