[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Roman <roma.makhunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
coverage = "^7.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
